--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Ionic App</title>
+    <title>Welcome to my ReactJS Exercise! - FullStack Web Developer Andrés Cañón</title>
 
     <base href="/" />
 
@@ -15,9 +15,13 @@
     <meta name="msapplication-tap-highlight" content="no" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+   
+    <link rel="shortcut icon" type="image/png" href="https://www.hellobuild.co/favicon-32x32.png" />
 
-    <link rel="shortcut icon" type="image/png" href="%PUBLIC_URL%/assets/icon/favicon.png" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Georama&display=swap" rel="stylesheet"> 
+    
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-title" content="Ionic App" />
